// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Larivaar /> renders children when disabled 1`] = `"Vahi Guru"`;

exports[`<Larivaar /> renders concatenated children when enabled 1`] = `
Array [
  <LarivaarWord
    index={0}
    key="0"
    larivaarAssistColor=""
    word="Vahi"
  />,
  <LarivaarWord
    index={1}
    key="1"
    larivaarAssistColor=""
    word="Guru"
  />,
]
`;

exports[`<Larivaar /> renders odd words as orange when larivaarAssist is enabled 1`] = `
Array [
  <LarivaarWord
    index={0}
    key="0"
    larivaarAssistColor="#f39c1d"
    word="Vahi"
  />,
  <LarivaarWord
    index={1}
    key="1"
    larivaarAssistColor="#f39c1d"
    word="Guru"
  />,
]
`;
